[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cloudscraper>=1.2.71",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "ruff>=0.13.0",
    "selenium>=4.35.0",
]
